fix typo et init jenkins

--- a/.env
+++ b/.env
@@ -4,6 +4,15 @@ ENV_FILE=.env
 APP_ENV=dev
 APP_SECRET=5e1fec05d027161cfb9a3b9c88eb820b
 ###< symfony/framework-bundle ###
+APP_NAME=gethauth
+APP_SLUG=gethauth
+DB_CONNECTION=pdo_mysql
+DB_HOST=${APP_SLUG}_database
+DB_PORT=3306
+DB_DATABASE=scan_sante
+DB_USERNAME=gesthauth
+DB_PASSWORD=root
+DB_ROOT_PASSWORD=root
 
 ###> doctrine/doctrine-bundle ###     CHANGE THIS IF U USE DOCKER
 #DATABASE_URL="mysql://root:root@127.0.0.1:3306/scan_sante?serverVersion=8.0.32&charset=utf8mb4"
@@ -18,17 +27,6 @@ APP_DEBUG=1
 
 GET_USER_INFO_URL='https://devel-plage-infoservice.atih.sante.fr/plage-infoservice/getUserInfo.do'
 GET_ETABLISSEMENT_INFO_URL='https://devel-plage-infoservice.atih.sante.fr/plage-infoservice/getESInfo.do'
-
-APP_NAME=symfony
-APP_SLUG=symfony
-
-DB_CONNECTION=pdo_mysql
-DB_HOST=${APP_SLUG}_database
-DB_PORT=3306
-DB_DATABASE=scan_sante
-DB_USERNAME=gesthauth
-DB_PASSWORD=root
-DB_ROOT_PASSWORD=root
 
 ###> symfony/mailer ###
 #MAILER_DSN=smtp://mailcatcher:1025
