--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
     environment:
       SERVICE_NAME: ${APP_SLUG}_php
       SERVICE_TAGS: ${APP_ENV}
-      TEST: ${TEST}
     working_dir: /var/www
     volumes:
       - ./:/var/www
@@ -54,7 +53,7 @@ services:
   # Mailcatcher Service
   mailcatcher:
     image: schickling/mailcatcher
-    container_name: mailcatcher
+    container_name: ${APP_SLUG}_mailcatcher
     restart: unless-stopped
     ports:
       - "1080:1080"
