--- a/.env
+++ b/.env
@@ -11,12 +11,12 @@ DB_HOST=${APP_SLUG}_database
 DB_PORT=3306
 DB_DATABASE=scan_sante
 DB_USERNAME=gesthauth
-DB_PASSWORD=S10j4l3g8e
+DB_PASSWORD=root
 DB_ROOT_PASSWORD=root
 
 ###> doctrine/doctrine-bundle ###     CHANGE THIS IF U USE DOCKER
-DATABASE_URL="mysql://gethauth:S10j4l3g8e@127.0.0.1:3306/scan_sante?serverVersion=8.0.32&charset=utf8mb4"
-#DATABASE_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}?serverVersion=8.0.32&charset=utf8mb4"
+#DATABASE_URL="mysql://gethauth:S10j4l3g8e@127.0.0.1:3306/scan_sante?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
@@ -34,4 +34,3 @@ GET_ETABLISSEMENT_INFO_URL='https://devel-plage-infoservice.atih.sante.fr/plage-
 EMAIL_APPLICATION=application_gestauth@atih.sante.fr
 MAILER_DSN=smtp://localhost:1025
 EMAIL_RESPONSABLE=validation_gestauth@atih.sante.fr
-EMAIL_APPLICATION=kevin.aubel@ouidou.fr
